webui/webui-ingress.yaml
#WebUI ingress for webui-rucio-webui svc
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: <WEBUI_HOSTNAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webui-rucio-webui
            port:
              number: 80
  tls: 
  - hosts:
    - <WEBUI_HOSTNAME>
    secretName: tls-rucio-webui
